--- a/oci-oke-deployment.yaml
+++ b/oci-oke-deployment.yaml
@@ -15,7 +15,8 @@ spec:
       containers:
         - name: sample-oke-canary-app
           # enter the path to your image, be sure to include the correct region prefix
-          image: us-ashburn-1.ocir.io/fahdabidiroottenancy/rahul/mr-devops/mr-devops-oke-canary-sample:${BUILDRUN_HASH}
+          #image: us-ashburn-1.ocir.io/fahdabidiroottenancy/rahul/mr-devops/mr-devops-oke-canary-sample:${BUILDRUN_HASH}
+          image: iad.ocir.io/yza00k7tuks0/csp-aud-oke-repo:${BUILDRUN_HASH}
           imagePullPolicy: Always
           ports:
             - containerPort: 80
